# DriftVM

./: .gitignore  README.md  driftvm.sql
daemon/: CMakeLists.txt  driftvmd.conf
daemon/DSL/: CMakeLists.txt
daemon/driftvmd/: CMakeLists.txt  bind_dns.cpp  driftvmd.h  firewall.cpp  jobs.cpp  machine_driver_kvm.cpp  machine_driver_lxc.cpp  machine_drivers.cpp  machines.cpp  main.cpp  networks.cpp  util.cpp  util.h
daemon/driftvmd/rpc/: driftvm_funcs.cpp  server.cpp  server.h
daemon/univalue/: CMakeLists.txt
www/: .htaccess  config.inc.php.example  core.inc.php  footer.inc.php  header.inc.php  index.php  module.php
www/include/: csrf.inc.php  db.mysqli.inc.php  driftvm.inc.php  functions.inc.php  gridtable.inc.php  jsonRPCClient.php  passwd.inc.php  ratelimiter.inc.php  sysinfo.inc.php
www/include/machine_drivers/: KVM.php  LXC.php
www/modules/auth_dashboard/: index.php
www/modules/auth_machines/: create.php  index.php  list.php  view.php
www/modules/auth_networks/: create.php  edit.php  index.php  list.php  view.php
www/modules/auth_settings/: index.php
www/modules/login/: index.php
